# BitWiseContainer

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/header_files/: Array.h  Buffer.h  Errors.h  Storage.h  global.h
lib/source_files/: Array.cpp  Buffer.cpp  Storage.cpp  global.cpp
tests/: CMakeLists.txt  array_tests.cpp
